<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#6e5f76">

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/luv_appbar_bg"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="4dp"
        android:baselineAligned="false"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:paddingLeft="4dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">
            <ImageView
                android:id="@+id/img_album" 
	            android:layout_width="32dp"
	            android:layout_height="32dp"
	            android:src="@drawable/default_album"
	            android:contentDescription="@string/lb_no_description"/>
	       	<com.p2c.solutions.luvphoto.LuvTextView
	        	android:id="@+id/appbar_tittle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/lb_update_profile"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textColor="#63546b"
		        android:paddingLeft="4dp"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">            
            <ImageView
                android:id="@+id/btn_update" 
	            android:layout_width="36dp"
	            android:layout_height="36dp"            
	            android:src="@drawable/update"
	            android:contentDescription="@string/lb_no_description"/>    
	            
            <ImageView
                android:id="@+id/btn_about" 
	            android:layout_width="36dp"
	            android:layout_height="36dp"            
	            android:src="@drawable/help"
	            android:contentDescription="@string/lb_no_description"
	            android:visibility="gone"/>    	            
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_gravity="center_horizontal|center_vertical"
	    android:background="#ffffff"
	    android:padding="20dp"
	    android:layout_margin="14dp">		    			    
	    
       <com.p2c.solutions.luvphoto.LuvTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_account_info"
        android:textColor="#6e5f76"
        android:layout_marginBottom="5dp"/>	
       
	    <com.p2c.solutions.luvphoto.LuvEditText
	        android:id="@+id/txtEmail"
   	        android:layout_width="fill_parent"
   	        android:layout_height="wrap_content"
   	        android:hint="@string/lb_email"
   	        android:textColor="#6f5d75"
   	        android:textColorHint="#6f5d75"
   	        android:layout_marginBottom="10dp"
   	        android:padding="5dp"
   	        android:inputType="textEmailAddress"
   	        android:background="#e5e5e5"
   	        android:enabled="false"        
   	        />	
  	            		    
	    <com.p2c.solutions.luvphoto.LuvEditText
	        android:id="@+id/txtPassword"
   	        android:layout_width="fill_parent"
   	        android:layout_height="wrap_content"
   	        android:textColor="#6f5d75"
   	        android:textColorHint="#6f5d75"
   	        android:inputType="textPassword"
   	        android:hint="@string/lb_password"
   	        android:padding="5dp"
   	        android:background="#e5e5e5"/>
	</LinearLayout>
	    
    <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_gravity="center_horizontal|center_vertical"
		    android:background="#ffffff"
		    android:padding="20dp"
		    android:layout_margin="14dp">			    
		    
        <com.p2c.solutions.luvphoto.LuvTextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lb_profile_info"
	        android:textColor="#6e5f76"
	        android:layout_marginBottom="5dp"/>	
	        
		    <com.p2c.solutions.luvphoto.LuvEditText
		        android:id="@+id/txtName"
	   	        android:layout_width="fill_parent"
	   	        android:layout_height="wrap_content"
	   	        android:textColor="#6f5d75"
	   	        android:textColorHint="#6f5d75"
	   	        android:layout_marginBottom="10dp"
	   	        android:hint="@string/lb_your_name"
	   	        android:padding="5dp"
	   	        android:background="#e5e5e5"
	   	        />
	    </LinearLayout> 	 	    
</LinearLayout>
