<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">
 
    	<com.p2c.solutions.luvphoto.LuvTextView
	        android:id="@+id/tvTitle"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:background="#df4782"
	        android:paddingLeft="5dp"
	        android:paddingRight="5dp"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"/> 
    	
    	<com.p2c.solutions.luvphoto.LuvEditText
	        android:id="@+id/txtMessage"
   	        android:layout_width="fill_parent"
   	        android:layout_height="wrap_content"
   	        android:layout_gravity="center_horizontal"
   	        android:hint="@string/lb_email"
   	        android:textColor="#000000"
   	        android:textColorHint="#dddddd"
   	        android:layout_marginBottom="10dp"
   	        android:padding="5dp"
   	        android:inputType="textEmailAddress"
   	        android:background="#e5e5e5"
   	        android:layout_margin="5dp"
   	        />	
   	        
    	<LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_horizontal">
	        
	        <com.p2c.solutions.luvphoto.LuvButton
	            android:id="@+id/dialogButtonOK"
		        android:layout_width="110dp"
		        android:layout_height="26dp"
		        android:layout_gravity="center_horizontal"
		        android:gravity="center_horizontal"
		        android:text="@string/lb_ok"
		        android:textColor="#FFFFFF"
		        android:background="#f04d8c"
		        android:padding="4dp"
		        android:layout_margin="5dp"
		        />
		 
	        <com.p2c.solutions.luvphoto.LuvButton
	            android:id="@+id/dialogButtonCancel"
		        android:layout_width="110dp"
		        android:layout_height="26dp"
		        android:layout_gravity="center_horizontal"
		        android:gravity="center_horizontal"
		        android:text="@string/lb_cancel"
		        android:textColor="#FFFFFF"
		        android:background="#f04d8c"
		        android:padding="4dp"
		        android:layout_margin="5dp"
		        />
	    </LinearLayout>    
</LinearLayout>