<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="#6e5f76">      

    <LinearLayout 
       	android:layout_width="fill_parent"
	   	android:layout_height="fill_parent"
	   	android:orientation="vertical"
	   	android:gravity="center_vertical">
	       <com.p2c.solutions.luvphoto.LuvHorizontalListView 
	    	android:id="@+id/lv_album"
	    	style="@style/ListAlbumItemStyle"
	    	android:transcriptMode="alwaysScroll">            
	 	</com.p2c.solutions.luvphoto.LuvHorizontalListView>
    </LinearLayout>    

    <com.p2c.solutions.luvphoto.LuvTextView
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_marginBottom="30dp"/>
    
    <LinearLayout 
        android:id="@+id/pn_admod"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        
        <com.google.ads.AdView
	        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	        android:id="@+id/adView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        ads:adSize="BANNER"
	        ads:adUnitId="a1535c92eb41812"
	        ads:testDevices="TEST_EMULATOR,33E661802076E2B84D41346887EBBC95" />	        
    </LinearLayout>    
   	
    <LinearLayout
		android:id="@+id/panel_refresh"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="#343843"
	    android:visibility="gone"
	    android:orientation="vertical"
	    android:gravity="center_vertical|center_horizontal"
	    android:paddingLeft="30dp"
	    android:paddingRight="30dp"> 
	      
	    <ImageView
	       android:layout_width="50dp"
	       android:layout_height="50dp"
	       android:src="@drawable/wifi"
	       android:contentDescription="@string/lb_no_description"
	       android:layout_marginBottom="10dp"/>
	      
		<com.p2c.solutions.luvphoto.LuvTextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/lb_you_are_current_offline"
	       android:gravity="center"
	       android:textColor="#ffffff"
	       android:textSize="16sp"
	       android:layout_marginBottom="10dp"/>
	
		<com.p2c.solutions.luvphoto.LuvTextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/lb_you_are_current_offline_description"
	       android:gravity="center"
	       android:textColor="#999ba1"
	       android:lineSpacingExtra="8dp"
	       android:layout_marginBottom="20dp"/>
		
		<com.p2c.solutions.luvphoto.LuvTextView
		   android:id="@+id/btn_refresh"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/lb_refresh"
	       android:gravity="center"
	       android:textColor="#999ba1"
	       android:background="@drawable/borderstyle3"	       
	       android:paddingTop="10dp"
	       android:paddingBottom="10dp"
	       android:paddingLeft="40dp"
	       android:paddingRight="40dp"/>	
  	</LinearLayout>
 </RelativeLayout>    